--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     />
   </head>
   <body>
-
+    <!--Шапка-->
     <header class="header">
       <a href="#homepage" class="logo">
         <!--<img src="./logo.svg" alt="" class="logo">-->
@@ -27,6 +27,7 @@
       </nav>
       <button class="gradient-btn">Написать</button>
     </header>
+    <!--Домашняя-->
     <section class="home" id="home">
       <div class="home-content">
         <h1>Привет! Это Роман <span>LagutaIT</span></h1>
@@ -52,6 +53,7 @@
         <img src="logo.svg" alt="">
       </div>
     </section>
+    <!--Обо мне-->
     <section class="about" id="about">
       <div class="about-img">
         <img src="logo.svg" alt="">
@@ -62,6 +64,7 @@
         <a href="#" class="btn">Read More</a>
       </div>
     </section>
+    <!--Сервисы-->
     <section class="services" id="services">
       <h2 class="heading">Services</h2>
       <div class="services-container">
@@ -91,6 +94,8 @@
         </div>
       </div>
     </section>
+    <!--Проекты-->
     <script src="script.js"></script>
   </body>
 </html>
+<!---->
