--- a/index.html
+++ b/index.html
@@ -95,7 +95,63 @@
       </div>
     </section>
     <!--Проекты-->
+    <section class="projects" id="projects">
+      <h2 class="heading">
+        Мои проекты
+      </h2>
+      <div class="projects-box">
+        <div class="project-card">
+          <img src="project1.png" alt="">
+          <h3>Проект 1</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos voluptas ex fugit vitae eos, nisi necessitatibus molestias optio sequi deserunt est modi consequuntur a adipisci. Commodi molestias eaque nobis ut.</p>
+          <div class="btn">
+            Посмотреть проект
+          </div>
+        </div>
+        <div class="project-card">
+          <img src="project2.png" alt="">
+          <h3>Проект 2</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos voluptas ex fugit vitae eos, nisi necessitatibus molestias optio sequi deserunt est modi consequuntur a adipisci. Commodi molestias eaque nobis ut.</p>
+          <div class="btn">
+            Посмотреть проект
+          </div>
+        </div>
+        <div class="project-card">
+          <img src="project3.png" alt="">
+          <h3>Проект 3</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos voluptas ex fugit vitae eos, nisi necessitatibus molestias optio sequi deserunt est modi consequuntur a adipisci. Commodi molestias eaque nobis ut.</p>
+          <div class="btn">
+            Посмотреть проект
+          </div>
+        </div>
+        <div class="project-card">
+          <img src="project4.png" alt="">
+          <h3>Проект 4</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos voluptas ex fugit vitae eos, nisi necessitatibus molestias optio sequi deserunt est modi consequuntur a adipisci. Commodi molestias eaque nobis ut.</p>
+          <div class="btn">
+            Посмотреть проект
+          </div>
+        </div>
+        <div class="project-card">
+          <img src="project5.png" alt="">
+          <h3>Проект 5</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos voluptas ex fugit vitae eos, nisi necessitatibus molestias optio sequi deserunt est modi consequuntur a adipisci. Commodi molestias eaque nobis ut.</p>
+          <div class="btn">
+            Посмотреть проект
+          </div>
+        </div>
+        <div class="project-card">
+          <img src="project6.png" alt="">
+          <h3>Проект 6</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos voluptas ex fugit vitae eos, nisi necessitatibus molestias optio sequi deserunt est modi consequuntur a adipisci. Commodi molestias eaque nobis ut.</p>
+          <div class="btn">
+            Посмотреть проект
+          </div>
+        </div>
+      </div>
+    </section>
     <script src="script.js"></script>
+    
   </body>
 </html>
 <!---->
